syntax = "proto3";

package notification;

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (NotificationResponse);
  rpc GetNotificationsByUser (UserIdRequest) returns (NotificationListResponse);
}

// MESSAGES
message SendNotificationRequest {
  string userId = 1;
  string title = 2;
  string message = 3;
}

message UserIdRequest {
  string userId = 1;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}

message NotificationListResponse {
  repeated Notification notifications = 1;
}

message Notification {
  string id = 1;
  string title = 2;
  string message = 3;
  string date = 4;
  bool read = 5;
}
